# eez_lvgl_mobile_demo

./: .gitmodules  README.md  README.txt
[Normal]_lvgl_CMake_stm32mp157_linux/: cmakenote.txt
[Normal]_lvgl_CMake_stm32mp157_linux/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
[Normal]_lvgl_CMake_stm32mp157_linux/_build/src/: Makefile  cmake_install.cmake
[Normal]_lvgl_CMake_stm32mp157_linux/_build/src/lv_100ask_teach_demos/: Makefile  cmake_install.cmake
[Normal]_lvgl_CMake_stm32mp157_linux/_build/src/lv_drivers/: Makefile  cmake_install.cmake
[Normal]_lvgl_CMake_stm32mp157_linux/_build/src/lvgl/: Makefile  cmake_install.cmake
[Normal]_lvgl_CMake_stm32mp157_linux/src/: CMakeLists.txt  lv_drv_conf.h  main.c
[Normal]_lvgl_CMake_stm32mp157_linux/src/lv_100ask_teach_demos/: lv_100ask_teach_demos.h  lv_100ask_teach_demos_conf_template.h
[Normal]_lvgl_CMake_stm32mp157_linux/src/lv_100ask_teach_demos/src/lv_100ask_demo_course_2_1_1/: lv_100ask_demo_course_2_1_1.c
[Normal]_lvgl_CMake_stm32mp157_linux/src/lvgl/: CMakeLists.txt
[Normal]_lvgl_CMake_stm32mp157_linux/src/lvgl/demos/music/: lv_demo_music_list.c
[Problem]_eez-lvlg_CMake_stm32mp157_linux/: CMakeLists.txt
[Problem]_eez-lvlg_CMake_stm32mp157_linux/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
[Problem]_eez-lvlg_CMake_stm32mp157_linux/_build/src/: Makefile  cmake_install.cmake
[Problem]_eez-lvlg_CMake_stm32mp157_linux/_build/src/eez-framework/: Makefile  cmake_install.cmake
[Problem]_eez-lvlg_CMake_stm32mp157_linux/_build/src/lv_100ask_teach_demos/: Makefile  cmake_install.cmake
[Problem]_eez-lvlg_CMake_stm32mp157_linux/_build/src/lv_drivers/: Makefile  cmake_install.cmake
[Problem]_eez-lvlg_CMake_stm32mp157_linux/_build/src/lvgl/: Makefile  cmake_install.cmake
[Problem]_eez-lvlg_CMake_stm32mp157_linux/_build/src/ui/: Makefile  cmake_install.cmake
[Problem]_eez-lvlg_CMake_stm32mp157_linux/src/: CMakeLists.txt  lv_conf.h  main.c  smart-home.eez-project
[Problem]_eez-lvlg_CMake_stm32mp157_linux/src/lv_100ask_teach_demos/: CMakeLists.txt
[Problem]_eez-lvlg_CMake_stm32mp157_linux/src/lv_drivers/: CMakeLists.txt
[Problem]_eez-lvlg_CMake_stm32mp157_linux/src/lv_drivers/display/: fbdev.h
[Problem]_eez-lvlg_CMake_stm32mp157_linux/src/lv_drivers/indev/: evdev.h
[Problem]_eez-lvlg_CMake_stm32mp157_linux/src/lvgl/demos/music/: lv_demo_music.c
[Problem]_eez-lvlg_CMake_stm32mp157_linux/src/ui/: CMakeLists.txt  actions.h  fonts.h  images.h  screens.c  screens.h  ui.c  ui_font_bold_21.c  ui_font_regular_16.c  ui_image_arrow_account.c  ui_image_arrow_next_hover.c  ui_image_big_checkmark.c  ui_image_button_main.c  ui_image_checkmark.c  ui_image_face_0.c  ui_image_face_1.c  ui_image_face_2.c  ui_image_header_menu.c  ui_image_power_background.c  ui_image_saved.c  ui_image_slider_indicator.c  ui_image_slider_lighting.c  ui_image_temperature_background.c
eez-lvlg_armv7l_linux/: CMakeLists.txt  Makefile  cmakenote.txt
eez-lvlg_armv7l_linux/src/: CMakeLists.txt  lv_100ask_teach_demos_conf.h  lv_conf.h  lv_drv_conf.h  main.c  smart-home.eez-project  smart-home.eez-project-ui-state
eez-lvlg_armv7l_linux/src/eez-framework/src/eez/flow/: operations.cpp
eez-lvlg_armv7l_linux/src/lv_drivers/gtkdrv/: gtkdrv.h
eez-lvlg_armv7l_linux/src/lv_drivers/sdl/: sdl_gpu.h
eez-lvlg_armv7l_linux/src/lvgl/demos/music/: lv_demo_music_main.c
eez-lvlg_armv7l_linux/src/ui/: actions.h  flow_def.c  flow_def.h  fonts.h  images.h  screens.c  screens.h  ui_font_bold_17.c  ui_font_bold_23.c  ui_font_regular_21.c  ui_font_regular_36.c  ui_image_arrow_account.c  ui_image_arrow_account_hoover.c  ui_image_arrow_prev_hoover.c  ui_image_big_checkmark.c  ui_image_button_main.c  ui_image_checkmark.c  ui_image_face_0.c  ui_image_face_1.c  ui_image_face_2.c  ui_image_garage_arrows_hoover.c  ui_image_header_menu.c  ui_image_power_background.c  ui_image_save.c  ui_image_saved.c  ui_image_slider_indicator.c  ui_image_slider_lighting.c  ui_image_switch_off.c  ui_image_switch_on.c  ui_image_temperature_background.c  ui_image_watch.c
